--- a/css/responsive.css
+++ b/css/responsive.css
@@ -72,11 +72,11 @@
 }
 
 @media only screen and (max-width: 700px) {
-  navbar nav a {
+  #navbar nav a {
     display: none;
   }
 
-  navbar nav a.menu-icon {
+  #navbar nav a.menu-icon {
     display: block;
     float: right;
     font-size: 1.5em;
