--- a/css/responsive.css
+++ b/css/responsive.css
@@ -93,7 +93,7 @@
   }
 }
 
-@media only screen and (max-width 495px) {
+@media only screen and (max-width: 495px) {
   #logo h2 {
     visibility: hidden;
   }
